ISPN-7659 Compile the server with --add-modules too